# dim_pedestrian_walkway_graph

./: LICENSE  README.md
data_importer/: .gitignore  dim.json
data_importer/config/: fiware_config.json  fiware_config.json.tmpl
data_importer/preprocess_command/: Dockerfile  default_config.json  link.bash  node.bash
data_importer/preprocess_command/src/: main.py  pyproject.toml
data_importer/preprocess_command/src/importer/: config.py  executors.py  models.py
data_importer/preprocess_command/src/templates/: link_entity.j2  node_entity.j2
fiware/: docker-compose.yml
graph_viewer/: Dockerfile
graph_viewer/config/: viewer_config.json  viewer_config.json.tmpl
graph_viewer/src/: main.py  pyproject.toml
graph_viewer/src/viewer/: config.py  models.py  parser.py  renderer.py  strategies.py  utils.py
